--- a/ALR.html
+++ b/ALR.html
@@ -738,6 +738,33 @@ rho(c(1,2,3,4), c(4,5,6,7))</code></pre>
 <h2>Chapter 4: Clustering</h2>
 <p><strong>Clustering</strong>: Grouping or partitioning vectors into groups with the vectors in each group close to each other in some way.</p>
 </div>
+<div id="chapter-5-linear-independence" class="section level2">
+<h2>Chapter 5: Linear Independence</h2>
+<div id="linear-dependence-and-independence" class="section level3">
+<h3>Linear Dependence and Independence</h3>
+<p><strong>Linear Dependence</strong>: A collection of n-vectors <span class="math inline">\(a_1, a_2,..., a_k\)</span> with <span class="math inline">\(k\geq1\)</span> is linearly dependent if <span class="math inline">\(\beta_1a_1 + ... + \beta_ka_k = 0\)</span> holds from some <span class="math inline">\(\beta_1,..., \beta_k\)</span> that are not all zero.</p>
+<ul>
+<li>When a collection of vectors are linearly dependent, at least one vector can be expressed as a linear combination of the other vectors.</li>
+</ul>
+<p><strong>Linear Independence</strong> The above definition only holds for when <span class="math inline">\(\beta_1 = \beta_2 = ... = \beta_k = 0\)</span>. E.g. the only linear combination of vectors that equals the zero vector is the linear combination with all coefficients = 0.</p>
+<p><strong>Linear Combination of Independent Vectors</strong>: Suppose we have a vector <em>x</em> that is a linear combination of <span class="math inline">\(a_1,..., a_k\)</span>. When the vectors <span class="math inline">\(a_1,...,a_k\)</span> are linearly independent then the coefficients that form x are unique.</p>
+</div>
+<div id="basis" class="section level3">
+<h3>Basis</h3>
+<p><strong>Independence-dimension inequality</strong>: If n-vectors <span class="math inline">\(a_1,...,a_k\)</span> are linearly independent then <span class="math inline">\(k \leq n\)</span>.</p>
+<ul>
+<li>In words “A linearly independent collection of n-vectors can have at most n elements.”</li>
+</ul>
+<p><strong>Basis</strong>: A collection of linearly independent n-vectors.</p>
+<ul>
+<li>If the n-vectors <span class="math inline">\(a_1, ..., a_n\)</span> are a basis then any n-vector <span class="math inline">\(b\)</span> can be written as a linear combination of them.</li>
+<li>Since we know any linear combination of linearly independent vectors can only be expressed in one way we have the implication that <em>any n-vector <span class="math inline">\(b\)</span> can be written in a unique way as a linear combination of a basis <span class="math inline">\(a_1,...,a_n\)</span></em></li>
+</ul>
+</div>
+</div>
+<div id="chapter-6-matrices" class="section level2">
+<h2>Chapter 6: Matrices</h2>
+</div>
 
 
 
